hphp/hack/test/typecheck/reactive/varray_as_field.php.coeffects.exp
File "varray_as_field.php", line 10, characters 3-9:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "varray_as_field.php", line 9, characters 17-18:
  The local (enclosing) context provides the capability set {}
